--- a/src/app/pages/tabs/artist-profile/artist-profile.page.scss
+++ b/src/app/pages/tabs/artist-profile/artist-profile.page.scss
@@ -29,6 +29,7 @@ ion-content {
     --color: #3880ff;
     --indicator-color: #3880ff;
     margin: 20px 0;
+    position: relative !important;
   }
 
   // div {
