--- a/src/app/components/artwork/artwork.component.scss
+++ b/src/app/components/artwork/artwork.component.scss
@@ -42,3 +42,9 @@ div.bannerStyle {
     }
   }
 }
+
+ion-row .addButton {
+  border: 1px solid #000 !important;
+  border-radius: 2px !important;
+  padding: 0.2rem;
+}
