--- a/src/app/components/browse-medium/browse-medium.component.html
+++ b/src/app/components/browse-medium/browse-medium.component.html
@@ -3,11 +3,11 @@
     <ion-card>
       <img
         class="customArtworkMedium"
-        [alt]="medium.artMediumName"
+        [alt]="medium.mediumType"
         [src]="medium.image"
       />
       <ion-card-header>
-        <ion-card-subtitle>{{ medium.artMediumName }}</ion-card-subtitle>
+        <ion-card-subtitle>{{ medium.mediumType }}</ion-card-subtitle>
       </ion-card-header>
     </ion-card>
   </ion-col>
