--- a/src/app/pages/tabs/browse/browse.page.html
+++ b/src/app/pages/tabs/browse/browse.page.html
@@ -11,7 +11,9 @@
     <ion-segment-button value="medium" class="segment-medium">
       Medium
     </ion-segment-button>
-    <ion-segment-button value="artist"> Artist </ion-segment-button>
+    <ion-segment-button value="artist"> 
+      Artist 
+    </ion-segment-button>
   </ion-segment>
 
   <div *ngIf="selectedSegment === 'medium'">
