--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -1,14 +1,23 @@
-<!-- <ion-header [translucent]="true">
+<ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>home</ion-title>
   </ion-toolbar>
-</ion-header> -->
+</ion-header>
 
 <ion-content>
+  
   <div *ngIf="isLoading"><ion-skeleton-text animated style="height: 25vh;"></ion-skeleton-text></div>
   <app-loading-artwork *ngIf="isLoading"></app-loading-artwork>
 
   <app-banner *ngIf="!isLoading" [bannerImages]="banners"></app-banner>
+
+
+
+
+
+
+
+
 
   <!-- <ion-list *ngIf="!isLoading">
     <ion-list-header class="ion-margin-bottom">
@@ -16,7 +25,7 @@
         <h4>Auction</h4>
         <p>Discover ongoing auctions</p>
       </ion-label>
-      <ion-button color="dark" vertical-align-center (click)="navigateToAuctionSegment('current')">
+      <ion-button color="dark" vertical-align-center (click)="navigateToAuction('current')">
         See All <span><ion-icon name="chevron-forward-outline"></ion-icon></span>
       </ion-button>
     </ion-list-header>
@@ -38,9 +47,9 @@
       <ion-button
         color="dark"
         vertical-align-center
-        (click)="navigateToAuctionSegment('current')"
+        (click)="navigateToAuction('current')"
       >
-        See All
+        View All
         <span><ion-icon name="chevron-forward-outline"></ion-icon></span>
       </ion-button>
     </ion-list-header>
@@ -69,6 +78,25 @@
         [artwork]="artwork"
         [routerLink]="['/', 'tabs', 'artwork-detail', artwork.artworkID]"
       ></app-artwork>
+    </ion-item-group>
+  </ion-list>
+
+
+  <ion-list>
+    <ion-list-header>
+      <ion-label>
+        <ion-text>Artists For You</ion-text>
+      </ion-label>
+      <ion-button color="dark" vertical-align-center (click)="navigateToBrowse('artist')">
+        View All <span><ion-icon name="chevron-forward-outline"></ion-icon></span>
+      </ion-button>
+    </ion-list-header>
+    <ion-item-group *ngIf="artists.length > 0">
+      <app-artists
+        *ngFor="let artist of artists"
+        [artist]="artist"
+        [routerLink]="['/', 'tabs', 'artist-profile', artist.artistID]"
+      ></app-artists>
     </ion-item-group>
   </ion-list>
 </ion-content>
