--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -16,13 +16,13 @@
       <ion-icon name="person-outline"></ion-icon>
       Account
     </ion-tab-button>
-    <ion-tab-button tab="search">
+    <!-- <ion-tab-button tab="search">
       <ion-icon name="search-outline"></ion-icon>
       Search
-    </ion-tab-button>
-    <ion-tab-button tab="cart">
+    </ion-tab-button> -->
+    <!-- <ion-tab-button tab="cart">
       <ion-icon name="cart-outline"></ion-icon>
       Cart
-    </ion-tab-button>
+    </ion-tab-button> -->
   </ion-tab-bar>
 </ion-tabs>
