--- a/src/app/components/artwork/artwork.component.html
+++ b/src/app/components/artwork/artwork.component.html
@@ -22,23 +22,32 @@
       alt=""
     />
   </ion-thumbnail>
-  <ion-label>
-    <h4>{{ getArtistName(artwork?.artistID) }}</h4>
-    <ion-text color="medium">
-      <p class="pStyle">{{ artwork?.title }}</p>
-
-      <ng-container *ngIf="isAuction(); else fixedPriceContent">
-        <p>Starting Bid: P{{ artwork?.price }}</p>
-        <ion-text color="tertiary">
-          <p class="distance">Current Bid: {{ getHighestBid(artwork) }}</p>
+  <ion-row>
+    <ion-col>
+      <ion-label>
+        <h4>{{ getData(artwork?.artistID) }}</h4>
+        <ion-text color="medium">
+          <p class="pStyle">{{ artwork?.title }}</p>
+    
+          <ng-container *ngIf="isAuction(); else fixedPriceContent">
+            <p>Starting Bid: P{{ artwork?.price }}</p>
+            <ion-text color="tertiary">
+              <p class="distance">Current Bid: {{ getHighestBid(artwork) }}</p>
+            </ion-text>
+          </ng-container>
+    
+          <ng-template #fixedPriceContent>
+            <ion-row>
+              <ion-col>
+                <ion-text color="tertiary">
+                  <p class="distance">Price: P{{ artwork.price }}</p>
+                </ion-text>
+              </ion-col>
+            </ion-row>
+          </ng-template>
         </ion-text>
-      </ng-container>
+      </ion-label>
+    </ion-col>
+  </ion-row>
 
-      <ng-template #fixedPriceContent>
-        <ion-text color="tertiary">
-          <p class="distance">Price: P{{ artwork.price }}</p>
-        </ion-text>
-      </ng-template>
-    </ion-text>
-  </ion-label>
 </ion-item>
