--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -12,6 +12,10 @@
       <ion-icon name="library-outline"></ion-icon>
       Browse
     </ion-tab-button>
+    <ion-tab-button tab="cart">
+      <ion-icon name="cart-outline"></ion-icon>
+      Cart
+    </ion-tab-button>
     <ion-tab-button tab="account">
       <ion-icon name="person-outline"></ion-icon>
       Account
@@ -19,10 +23,6 @@
     <!-- <ion-tab-button tab="search">
       <ion-icon name="search-outline"></ion-icon>
       Search
-    </ion-tab-button> -->
-    <!-- <ion-tab-button tab="cart">
-      <ion-icon name="cart-outline"></ion-icon>
-      Cart
     </ion-tab-button> -->
   </ion-tab-bar>
 </ion-tabs>
