--- a/src/app/pages/admin/add-banner/add-banner.page.html
+++ b/src/app/pages/admin/add-banner/add-banner.page.html
@@ -8,14 +8,18 @@
 </ion-header>
 
 <ion-content>
-
   <ion-list lines="none">
     <ion-item>
-      <input type="file" (change)="preview($event)">
-      <img *ngIf="bannerImage" [src]="bannerImage">
+      <input type="file" (change)="preview($event)" />
+      <img *ngIf="bannerImage" [src]="bannerImage" />
     </ion-item>
   </ion-list>
 
-  <ion-button class="ion-margin" expand="block" color="primary" (click)="saveBanner()">Save</ion-button>
-
+  <ion-button
+    class="ion-margin"
+    expand="block"
+    color="primary"
+    (click)="saveBanner()"
+    >Save</ion-button
+  >
 </ion-content>
