--- a/src/app/pages/admin/admin.page.html
+++ b/src/app/pages/admin/admin.page.html
@@ -3,13 +3,25 @@
     <ion-title>Admin Control Panel</ion-title>
     <ion-buttons slot="end">
       <ion-button fill="clear" (click)="logout()">
-        <ion-icon name="power-outline" color="white" slot="icon-only"></ion-icon>
+        <ion-icon name="power-outline" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-button class="ion-margin" expand="block" color="primary" routerLink="/admin/add-banner">Create Banner</ion-button>
-  <ion-button class="ion-margin" expand="block" color="primary" routerLink="/admin/add-menu-item">Create Menu Item</ion-button>
+  <ion-button
+    class="ion-margin"
+    expand="block"
+    color="primary"
+    routerLink="/admin/add-banner"
+    >Create Banner</ion-button
+  >
+  <ion-button
+    class="ion-margin"
+    expand="block"
+    color="primary"
+    routerLink="/admin/add-menu-item"
+    >Create Menu Item</ion-button
+  >
 </ion-content>
