--- a/src/app/pages/seller/seller.page.html
+++ b/src/app/pages/seller/seller.page.html
@@ -3,12 +3,18 @@
     <ion-title>Artist</ion-title>
     <ion-buttons slot="end">
       <ion-button fill="clear" (click)="logout()">
-        <ion-icon name="power-outline" color="white" slot="icon-only"></ion-icon>
+        <ion-icon name="power-outline" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-button class="ion-margin" expand="block" color="primary" routerLink="/seller/add-artwork">Upload your Artwork</ion-button>
+  <ion-button
+    class="ion-margin"
+    expand="block"
+    color="primary"
+    routerLink="/seller/add-artwork"
+    >Upload your Artwork</ion-button
+  >
 </ion-content>
