--- a/src/app/pages/tabs/account/account.page.html
+++ b/src/app/pages/tabs/account/account.page.html
@@ -3,41 +3,48 @@
     <ion-title>My Account</ion-title>
     <ion-buttons slot="end">
       <ion-button fill="clear" (click)="logout()">
-        <ion-icon name="power-outline" color="white" slot="icon-only"></ion-icon>
+        <ion-icon name="power-outline" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
   <!-- <div *ngIf="isLoading" class="ion-text-center alignSpinner"> -->
   <div class="ion-text-center alignSpinner">
     <ion-spinner color="primary"></ion-spinner>
   </div>
 
   <!-- <ng-container *ngIf="!isLoading"> -->
-    <ng-container>
+  <ng-container>
     <ion-list class="borderBottom">
       <ion-item lines="full">
-        <ion-button slot="end" fill="clear" (click)="editProfile()">EDIT</ion-button>
+        <ion-button slot="end" fill="clear" (click)="editProfile()"
+          >EDIT</ion-button
+        >
         <ion-label>
-          <ion-text class="ion-text-uppercase"><h4>{{profile?.name}}</h4></ion-text>
+          <ion-text class="ion-text-uppercase"
+            ><h4>{{profile?.name}}</h4></ion-text
+          >
           <p>{{profile?.phone}} | {{profile?.email}}</p>
         </ion-label>
       </ion-item>
-      <ion-item lines="none" detail="true" [routerLink]="['/', 'tabs', 'address']">
+      <ion-item
+        lines="none"
+        detail="true"
+        [routerLink]="['/', 'tabs', 'address']"
+      >
         <ion-icon name="home-outline" slot="start" color="dark"></ion-icon>
         <h5>Manage Addresses</h5>
       </ion-item>
     </ion-list>
-  
+
     <ion-list>
       <ion-list-header>
         <ion-label color="primary">PAST ORDERS</ion-label>
       </ion-list-header>
       <!-- <ion-text class="ion-text-center" *ngIf="!orders || orders?.length == 0"> -->
-        <ion-text class="ion-text-center">
+      <ion-text class="ion-text-center">
         <p>No Orders Placed Yet</p>
       </ion-text>
       <!-- <app-orders 
@@ -48,5 +55,4 @@
       </app-orders> -->
     </ion-list>
   </ng-container>
-
 </ion-content>
