--- a/src/app/pages/admin/admin.page.html
+++ b/src/app/pages/admin/admin.page.html
@@ -21,7 +21,7 @@
     class="ion-margin"
     expand="block"
     color="primary"
-    routerLink="/admin/add-menu-item"
-    >Create Menu Item</ion-button
+    routerLink="/admin/add-medium"
+    >Create New Medium</ion-button
   >
 </ion-content>
