--- a/src/app/pages/admin/add-banner/add-banner.page.html
+++ b/src/app/pages/admin/add-banner/add-banner.page.html
@@ -11,7 +11,7 @@
   <ion-list lines="none">
     <ion-item>
       <input type="file" (change)="preview($event)" />
-      <img *ngIf="bannerImage" [src]="bannerImage" />
+      <img *ngIf="banners" [src]="banners" />
     </ion-item>
   </ion-list>
 
